k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cal-diary
  labels:
    app: cal-diary
