k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cal-diary
  namespace: cal-diary
  labels:
    app: cal-diary
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
spec:
  type: LoadBalancer
  selector:
    app: cal-diary
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
